<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_trips" />
    </group>

    <item android:title="Preferences">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@android:drawable/ic_menu_day"
                android:title="@string/nav_theme" />
            <item
                android:id="@+id/nav_clear_data"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="Clear All Trips" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
